fixing align problem with timeline headers -> made them into a table, need to fix the arrow (not working before this commit)

--- a/public/front.css
+++ b/public/front.css
@@ -264,6 +264,7 @@ ul {
 }
 
 .collapsible-header {
+    padding-top:0;
     height: 40px;
     justify-content: space-between;
 }
@@ -318,6 +319,16 @@ label {
     margin-right: 20px;
 }
 
+.material-icons {
+    padding-top:0.5rem;
+    padding-left:1rem;
+    padding-right:1rem;
+}
+
+/* #filters {
+    width: 300px; 
+    float: left; 
+} */
 
 /* slider */
 
